<resources>
    <string name="app_name">Pankkisovellus</string>
    <string name="dont_have_a_user_yet">Dont have a user yet?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="rs_b_nk_d">RSÄ-Bänk :D</string>
    <string name="log_in">Log in</string>
    <string name="create_a_user">Create a user</string>
    <string name="accounts">Accounts</string>
    <string name="new_payment">New payment</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="deposit_withdraw_money">Deposit/Withdraw money</string>
    <string name="welcome_to_rs_bank">Welcome to RSÄ-bank</string>
    <string name="change_user_information">Change user information</string>
    <string name="account_type">Account Type</string>
    <string name="account_name">Account Name</string>
    <string name="payment_limit_0_unlimited">Payment Limit (0 = unlimited)</string>
    <string name="account_name_payment">Account name</string>
    <string name="create_an_account">Create an account</string>
    <string name="payment_limit">Payment limit</string>
    <string name="deposit_or_withdraw">Deposit or Withdraw</string>
    <string name="choose_an_account">Choose an account</string>
    <string name="choose_the_wanted_action">Choose the wanted action</string>
    <string name="amount">Amount</string>
    <string name="confirm">Confirm</string>
    <string name="new_payment_title">New Payment</string>
    <string name="choose_an_account_payment">Choose an account</string>
    <string name="amount_to_transfer">Amount to transfer</string>
    <string name="transfer">Transfer</string>
    <string name="receiver_s_account">Receiver\'s Account</string>
    <string name="receivers_username">Receivers Username</string>
    <string name="last_name_create">Last name</string>
    <string name="first_name_create">First name</string>
    <string name="choose_a_password">Choose a password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="date_of_birth_dd_mm_yyyy">Date of birth (dd.mm.yyyy)</string>
    <string name="create_account">Create account</string>
    <string name="choose_a_username">Choose a username</string>
    <string name="last_name_edit">Last Name</string>
    <string name="username_edit">Username</string>
    <string name="first_name_edit">First Name</string>
    <string name="date_of_birth_edit">Date of birth</string>
    <string name="fname">fname</string>
    <string name="change_userinformation">Change Userinformation</string>
    <string name="lname">lname</string>
    <string name="uname">uname</string>
    <string name="udob">udob</string>
    <string name="account_name_listitem">Account Name</string>
    <string name="account_balance_listitem">Account Balance</string>
    <string name="account_header">accname</string>
    <string name="event">Event</string>
    <string name="event_amount">amount</string>
    <string name="event_receiver">receiver</string>
</resources>